tests/diagnostics/expressions/operators/boolean_operand_not_boolean/expect.txt
# exit: 1
input/lib.coppice:2:12: error: boolean operators require boolean operands
      return 1 and true
             ^
